refactor: use Arrays.asList instead of List.of